export const snapshot = {};

snapshot[`after onRunStart 1`] = `
'{"type":"runStart","scenarios":3}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (1) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (1) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (2) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (2) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (3) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (3) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onRunEnd 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"runEnd","summary":{"total":3,"passed":3,"failed":0,"duration":45}}
'
`;

snapshot[`after onRunStart 2`] = `
'{"type":"runStart","scenarios":3}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (1) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (1) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (2-1) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (2-1) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onStepStart - Step that fails (2-2) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
'
`;

snapshot[`after onStepError - Step that fails (2-2) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:514:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
'
`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 1`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:514:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:514:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (3) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:514:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (3) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:514:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:514:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onRunEnd 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:514:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"runEnd","summary":{"total":3,"passed":2,"failed":1,"duration":35}}
'
`;

snapshot[`after onRunStart 3`] = `
'{"type":"runStart","scenarios":0}
'
`;

snapshot[`after onRunEnd 3`] = `
'{"type":"runStart","scenarios":0}
{"type":"runEnd","summary":{"total":0,"passed":0,"failed":0,"duration":0}}
'
`;

snapshot[`after onRunStart 4`] = `
'{"type":"runStart","scenarios":3}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 3`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (1) 3`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (1) 3`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 3`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (2) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (2) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 3`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (3) 3`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (3) 3`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 3`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onRunEnd 4`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"runEnd","summary":{"total":3,"passed":3,"failed":0,"duration":45}}
'
`;

snapshot[`after onRunStart 5`] = `
'{"type":"runStart","scenarios":3}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 4`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (1) 4`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (1) 4`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 4`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (2-1) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (2-1) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onStepStart - Step that fails (2-2) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
'
`;

snapshot[`after onStepError - Step that fails (2-2) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:726:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
'
`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 2`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:726:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
'
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 4`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:726:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
'
`;

snapshot[`after onStepStart - Step that passes (3) 4`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:726:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
'
`;

snapshot[`after onStepEnd - Step that passes (3) 4`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:726:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
'
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 4`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:726:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
'
`;

snapshot[`after onRunEnd 5`] = `
'{"type":"runStart","scenarios":3}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"scenarioStart","name":"Scenario with failing step","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"stepStart","name":"Step that fails","location":{"file":"test.scenario.ts","line":20}}
{"type":"stepError","name":"Step that fails","error":{"message":"Assertion failed","stack":"Error: Assertion failed\\\\n    at Object.<anonymous> (file:///Users/alisue/ogh/lambdalisue/deno-probitas/packages/probitas-reporter/testkit.ts:726:11)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)\\\\n    at async fn (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:378:13)\\\\n    at async innerWrapped (ext:cli/40_test.js:181:5)\\\\n    at async exitSanitizer (ext:cli/40_test.js:97:27)\\\\n    at async Object.outerWrapped [as fn] (ext:cli/40_test.js:124:14)\\\\n    at async TestContext.step (ext:cli/40_test.js:511:22)\\\\n    at async TestSuiteInternal.run (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:394:7)"}}
{"type":"scenarioEnd","name":"Scenario with failing step","status":"failed","duration":15}
{"type":"scenarioStart","name":"Simple passing scenario","location":{"file":"test.scenario.ts","line":10},"tags":[]}
{"type":"stepStart","name":"Step that passes","location":{"file":"test.scenario.ts","line":15}}
{"type":"stepEnd","name":"Step that passes","status":"passed","duration":10}
{"type":"scenarioEnd","name":"Simple passing scenario","status":"passed","duration":10}
{"type":"runEnd","summary":{"total":3,"passed":2,"failed":1,"duration":35}}
'
`;

snapshot[`after onRunStart 6`] = `
'{"type":"runStart","scenarios":0}
'
`;

snapshot[`after onRunEnd 6`] = `
'{"type":"runStart","scenarios":0}
{"type":"runEnd","summary":{"total":0,"passed":0,"failed":0,"duration":0}}
'
`;
